[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/heart.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/sword.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/run.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/pixel_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/pixel_font_sm.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/ui/battle/MinionInfoModal.gd" type="Script" id=6]

[node name="MinionInfoModal" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
margin_right = 720.0
margin_bottom = 800.0

[node name="Center" type="CenterContainer" parent="."]
margin_right = 720.0
margin_bottom = 800.0

[node name="Popup" type="AcceptDialog" parent="Center"]
visible = true
margin_left = 200.0
margin_top = 330.0
margin_right = 520.0
margin_bottom = 470.0
rect_min_size = Vector2( 320, 120 )
popup_exclusive = true
window_title = "Minion"

[node name="Margin" type="MarginContainer" parent="Center/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Center/Popup/Margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 296.0
margin_bottom = 96.0
custom_constants/separation = 8

[node name="MinionName" type="Label" parent="Center/Popup/Margin/VBox"]
margin_right = 288.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "Minion Name"

[node name="Stats" type="HBoxContainer" parent="Center/Popup/Margin/VBox"]
margin_top = 48.0
margin_right = 288.0
margin_bottom = 80.0
custom_constants/separation = 16

[node name="MoveIcon" type="TextureRect" parent="Center/Popup/Margin/VBox/Stats"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="MoveLabel" type="Label" parent="Center/Popup/Margin/VBox/Stats"]
margin_left = 48.0
margin_top = 1.0
margin_right = 60.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "2"
valign = 2

[node name="PowerIcon" type="TextureRect" parent="Center/Popup/Margin/VBox/Stats"]
margin_left = 76.0
margin_right = 108.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="PowerLabel" type="Label" parent="Center/Popup/Margin/VBox/Stats"]
margin_left = 124.0
margin_top = 1.0
margin_right = 136.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "2"
valign = 2

[node name="HealthIcon" type="TextureRect" parent="Center/Popup/Margin/VBox/Stats"]
margin_left = 152.0
margin_right = 184.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="HealthLabel" type="Label" parent="Center/Popup/Margin/VBox/Stats"]
margin_left = 200.0
margin_top = 1.0
margin_right = 212.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "2"
valign = 2

[node name="Skills" type="HBoxContainer" parent="Center/Popup/Margin/VBox"]
margin_top = 88.0
margin_right = 288.0
margin_bottom = 88.0

[connection signal="popup_hide" from="Center/Popup" to="." method="_on_Popup_popup_hide"]
